Test/errors/err_list_noncopyable_owner_copy.cb
// list.copy() over a NON-COPYABLE OWNING element: a struct that owns a `unique` pointer and has
// no hand-written copy() cannot be duplicated element-wise (the memberwise synth would share the
// raw pointer between two owners -> double-free). The tailored per-list compile_error fires when
// copy() is actually called (deferred past eager instantiation), so a file-scope expect_error
// catches it. The receiver is a list VALUE - `.copy()` on a `list<NC>*` is a pointer-identity copy.
import "list.cb";
struct Inner { int v = 0; };
struct NC { unique Inner* p = nullptr; ~NC() {} };
expect_error("cannot copy this list: its element type owns a 'unique' pointer and has no 'copy()'");
extern int main()
{
    list<NC> src = default;
    list<NC> dup = src.copy();
    return 0;
}
